--- a/template/partials/base.html
+++ b/template/partials/base.html
@@ -20,6 +20,9 @@
 
     <meta name="description" content="" />
 
+
+    <meta name="google-site-verification" content="4FCTe2tWZMeoOUFF-qh9kMJydGcPx6SMCgSBHtfwNA4" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static '/assets/img/favicon/favicon.ico' %}" />
 
