--- a/template/account/register.html
+++ b/template/account/register.html
@@ -140,7 +140,8 @@
               <h4 class="mb-2">Adventure starts here 🚀</h4>
               <p class="mb-4">Make your app management easy and fun!</p>
 
-              <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+              <form id="formAuthentication" class="mb-3" action="{% url 'account:register' %}" method="POST">
+                {% csrf_token %}
                 <div class="mb-3">
                   <label for="username" class="form-label">Username</label>
                   <input
@@ -154,7 +155,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" />
+                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" />
                 </div>
                 <div class="mb-3 form-password-toggle">
                   <label class="form-label" for="password">Password</label>
@@ -185,7 +186,7 @@
 
               <p class="text-center">
                 <span>Already have an account?</span>
-                <a href="auth-login-basic.html">
+                <a href="{% url 'account:login' %}">
                   <span>Sign in instead</span>
                 </a>
               </p>
