--- a/template/partials/base.html
+++ b/template/partials/base.html
@@ -126,9 +126,9 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="{% url 'account:request_withdrawal' %}">
                         <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
+                        <span class="align-middle">Withdraw</span>
                       </a>
                     </li>
                     <li>
