--- a/template/partials/base.html
+++ b/template/partials/base.html
@@ -96,7 +96,7 @@
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- Place this tag where you want the button to render. -->
                 <li class="nav-item lh-1 me-3">
-                  Balance: ${{user_balance}}
+                  Balance: ${{user_balance|floatformat:2}}
                 </li>
 
                 <!-- User -->
