--- a/template/partials/sidebar.html
+++ b/template/partials/sidebar.html
@@ -89,7 +89,7 @@
       <li class="menu-item {% if request.path == direct_link_url %}active{% endif %}">
         <a href="{% url 'core:direct_link' %}" class="menu-link">
           <i class="menu-icon tf-icons bx bx-link"></i>
-          <div data-i18n="Analytics">Direct Link</div>
+          <div data-i18n="Analytics">Smart Link</div>
         </a>
       </li>
 
