--- a/template/direct-link.html
+++ b/template/direct-link.html
@@ -18,6 +18,7 @@
               <th>Date</th>
               <th>ID</th>
               <th>Title</th>
+              <th>SubID</th>
               <th>...</th>
             </tr>
           </thead>
@@ -30,6 +31,7 @@
               </td>
               <td>{{ link.placement.id }}</td>
               <td>{{ link.placement.title }}</td>
+              <td>{{ link.subid }}</td>
               <td>
                 <button class="btn btn-sm btn-secondary">View Statistics</button>
                 <button class="btn btn-sm btn-primary copy-link-btn" data-link="{{ link.link }}">Copy Link</button>
