--- a/template/landing/index.html
+++ b/template/landing/index.html
@@ -1,7 +1,7 @@
 {% extends 'landing/base.html' %}
 {% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Advanced Advertising Network{% endblock %}
 
 {% block content %}
 <div class="banner" >
