--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -78,7 +78,7 @@
                   </div>
                   {% else %}
                   <select name="" class="form-control subid mt-2" id="{{ placement.id }}">
-                    <option value="">Choose Sub.</option>
+                    <option value="">Choose SubID</option>
                     <option value="Facebook">Facebook</option>
                     <option value="Blog">Blog</option>
                   </select>
