--- a/template/partials/sidebar.html
+++ b/template/partials/sidebar.html
@@ -96,7 +96,7 @@
       {% url 'account:request_withdrawal' as withdrawal %}
       <li class="menu-item {% if request.path == withdrawal %}active{% endif %}">
         <a href="{% url 'account:request_withdrawal' %}" class="menu-link">
-          <i class="menu-icon tf-icons bx bx-link"></i>
+          <i class="menu-icon tf-icons bx bx-money"></i>
           <div data-i18n="Analytics">Withdrawal</div>
         </a>
       </li>
