--- a/template/landing/index.html
+++ b/template/landing/index.html
@@ -19,43 +19,41 @@
   <div class="container">
     <section class="features-overview" id="features-section" >
       <div class="content-header">
-        <h2>How does it works</h2>
-        <h6 class="section-subtitle text-muted">One theme that serves as an easy-to-use operational toolkit<br>that meets customer's needs.</h6>
+        <h2>Why choose the leading online ad network</h2>
       </div>
       <div class="d-md-flex justify-content-between">
         <div class="grid-margin d-flex justify-content-start">
           <div class="features-width">
             <img src="{% static 'assets2/images/Group12.svg' %}" alt="" class="img-icons">
-            <h5 class="py-3">Speed<br>Optimisation</h5>
-            <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-            <a href="#"><p class="readmore-link">Readmore</p></a>  
+            <h5 class="py-3">Unique Partner Care</h5>
+            <p class="text-muted">Our Partner Care Standards go beyond just answering questions. In addition to high-competent support, we offer guidance on optimizing campaigns and monetizing traffic. Expert managers assist in improving ad strategy for your benefit.</p>
           </div>
         </div>
         <div class="grid-margin d-flex justify-content-center">
           <div class="features-width">
             <img src="{% static 'assets2/images/Group7.svg' %}" alt="" class="img-icons">
-            <h5 class="py-3">SEO and<br>Backlinks</h5>
-            <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-            <a href="#"><p class="readmore-link">Readmore</p></a>
+            <h5 class="py-3">Ad Safety and Traffic Quality</h5>
+            <p class="text-muted">Adsterra’s in-house 3-level security system prevents malware, ad fraud, and bot traffic, ensuring high-quality views and clicks. The platform’s intelligent algorithms serve offers to the most relevant audiences based on over 20 parameters.</p>
           </div>
         </div>
         <div class="grid-margin d-flex justify-content-end">
           <div class="features-width">
             <img src="{% static 'assets2/images/Group5.svg' %}" alt="" class="img-icons">
-            <h5 class="py-3">Content<br>Marketing</h5>
-            <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-            <a href="#"><p class="readmore-link">Readmore</p></a>
+            <h5 class="py-3">Performance-Boosting Tools</h5>
+            <p class="text-muted">Advertisers automate bidding strategies with Traffic Estimator and Smart CPM or set rules to optimize traffic by conversions (CPA Goal). Custom Bid allows for the finest bid adjustments, sending higher payouts to the best-performing placements.</p>
           </div>
         </div>
       </div>
     </section>     
     <section class="digital-marketing-service" id="digital-marketing-section">
+      <div class="content-header text-center mb-5">
+        <h2>Who can benefit from Adsterra ad network</h2>
+      </div>
       <div class="row align-items-center">
         <div class="col-12 col-lg-7 grid-margin grid-margin-lg-0" data-aos="fade-right">
-          <h3 class="m-0">We Offer a Full Range<br>of Digital Marketing Services!</h3>
+          <h3 class="m-0">Advertisers</h3>
           <div class="col-lg-7 col-xl-6 p-0">
-            <p class="py-4 m-0 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-            <p class="font-weight-medium text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer</p>
+            <p class="py-4 m-0 text-muted">Adsterra is a powerful online advertising network for brands, agencies, and media buyers. With over 20 targeting settings, you deliver ads to the best-matching audiences. Unlock high-quality CPM, CPC, and CPA traffic from 35K+ direct publishers.            </p>
           </div>    
         </div>
         <div class="col-12 col-lg-5 p-0 img-digital grid-margin grid-margin-lg-0" data-aos="fade-left">
@@ -67,12 +65,10 @@
           <img src="{% static 'assets2/images/Group2.png' %}" alt="" class="img-fluid">
         </div>
         <div class="col-12 col-lg-5 flex-item grid-margin" data-aos="fade-left">
-          <h3 class="m-0">Leading Digital Agency<br>for  Business Solution.</h3>
+          <h3 class="m-0">Publishers</h3>
           <div class="col-lg-9 col-xl-8 p-0">
-            <p class="py-4 m-0 text-muted">Power-packed with impressive features and well-optimized, this template is designed to provide the best performance in all circumstances.</p>
-            <p class="pb-2 font-weight-medium text-muted">Its smart features make it a powerful stand-alone website building tool.</p>
+            <p class="py-4 m-0 text-muted">With the highest-paying ad network, publishers can monetize sites, blogs or social media traffic. We provide solutions for earning without a website. AI algorithms are finetuned to send the most relevant CPM rates and ad feed.</p>
           </div>
-          <button class="btn btn-info">Readmore</button>
         </div>
       </div>
     </section>     
@@ -185,17 +181,6 @@
         </div>
       </div>
     </section>
-    <section class="contact-us" id="contact-section">
-      <div class="contact-us-bgimage grid-margin" >
-        <div class="pb-4">
-          <h4 class="px-3 px-md-0 m-0" data-aos="fade-down">Do you have any projects?</h4>
-          <h4 class="pt-1" data-aos="fade-down">Contact us</h4>
-        </div>
-        <div data-aos="fade-up">
-          <button class="btn btn-rounded btn-outline-danger">Contact us</button>
-        </div>          
-      </div>
-    </section>
     <section class="contact-details" id="contact-details-section">
       <div class="row text-center text-md-left">
         <div class="col-12 col-md-6 col-lg-3 grid-margin">
@@ -217,10 +202,10 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 grid-margin">
           <h5 class="pb-2">Our Guidelines</h5>
-          <a href="#"><p class="m-0 pb-2">Terms</p></a>   
-          <a href="#" ><p class="m-0 pt-1 pb-2">Privacy policy</p></a> 
-          <a href="#"><p class="m-0 pt-1 pb-2">Cookie Policy</p></a> 
-          <a href="#"><p class="m-0 pt-1">Discover</p></a> 
+          <a href="{% url 'core:index' %}"><p class="m-0 pb-2">Home</p></a>   
+          <a href="{% url 'core:contact' %}"><p class="m-0 pb-2">Contact</p></a>   
+          <a href="{% url 'account:login' %}" ><p class="m-0 pt-1 pb-2">Login</p></a> 
+          <a href="{% url 'account:register' %}" ><p class="m-0 pt-1 pb-2">Register</p></a> 
         </div>
         <div class="col-12 col-md-6 col-lg-3 grid-margin">
             <h5 class="pb-2">Our address</h5>
