--- a/template/landing/index.html
+++ b/template/landing/index.html
@@ -9,8 +9,8 @@
     <h1 class="font-weight-semibold">Advanced Advertising Network</h1>
     <h6 class="font-weight-normal text-muted pb-3">with a Unique Partner Care Approach</h6>
     <div>
-      <button class="btn btn-opacity-light mr-1">Get started</button>
-      <button class="btn btn-opacity-success ml-1">Learn more</button>
+      <a class="btn btn-opacity-light mr-1" href="{% url 'account:login' %}">Get started</a>
+      <a class="btn btn-opacity-success ml-1" href="{% url 'account:register' %}">Learn more</a>
     </div>
     <img src="{% static 'assets2/images/Group171.svg' %}" alt="" class="img-fluid">
   </div>
