--- a/template/partials/sidebar.html
+++ b/template/partials/sidebar.html
@@ -116,5 +116,25 @@
         </a>
       </li>
 
+      <li class="menu-item">
+        <!-- <a href="javascript:void(0);" class="menu-link menu-toggle">
+          <i class="menu-icon tf-icons bx bx-phone"></i>
+          <div data-i18n="Account Settings">Contact Us</div>
+        </a> -->
+        <ul class="menu-sub">
+          <li class="menu-item">
+            <a href="skype:{{setting.skype}}?chat" class="menu-link">
+              <div data-i18n="Account">Skype ID</div>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="mailto:{{setting.email}}" class="menu-link">
+              <div data-i18n="Notifications">Email ID</div>
+            </a>
+          </li>
+          
+        </ul>
+      </li>
+
     </ul>
   </aside>
