--- a/template/landing/base.html
+++ b/template/landing/base.html
@@ -11,13 +11,14 @@
   <link rel="stylesheet" href="{% static 'assets2/vendors/mdi/css/materialdesignicons.min.css' %}">
   <link rel="stylesheet" href="{% static 'assets2/vendors/aos/css/aos.css' %}">
   <link rel="stylesheet" href="{% static 'assets2/css/style.min.css' %}">
+  <link rel="icon" type="image/x-icon" href="{% static 'favicon.png' %}">
 </head>
 <body id="body" data-spy="scroll" data-target=".navbar" data-offset="100">
   <header id="header-section">
     <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar">
     <div class="container">
       <div class="navbar-brand-wrapper d-flex w-100">
-        <img src="{% static 'assets2/images/Group2.svg' %}" alt="">
+        <img src="{% static 'logo_2.png' %}" alt="">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="mdi mdi-menu navbar-toggler-icon"></span>
         </button> 
@@ -26,7 +27,7 @@
         <ul class="navbar-nav align-items-lg-center align-items-start ml-auto">
           <li class="d-flex align-items-center justify-content-between pl-4 pl-lg-0">
             <div class="navbar-collapse-logo">
-              <img src="{% static 'assets2/images/Group2.svg' %}" alt="">
+              <img src="{% static 'logo_2.png' %}" alt="">
             </div>
             <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="mdi mdi-close navbar-toggler-icon pl-5"></span>
