--- a/template/notice_detail.html
+++ b/template/notice_detail.html
@@ -17,7 +17,7 @@
       {% if notice.image %}
       <img src="{{ notice.image.url }}" alt="{{ notice.title }}" class="img-fluid rounded mb-3" />
       {% endif %}
-      <p>{{ notice.description }}</p>
+      <p>{{ notice.description|safe }}</p>
       <a href="{% url 'core:dashboard' %}" class="btn btn-primary">Back to Dashboard</a>
     </div>
   </div>
