--- a/template/partials/base.html
+++ b/template/partials/base.html
@@ -61,16 +61,14 @@
       <div class="layout-page">
         <!-- Navbar -->
 
-        <nav
-          class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-          id="layout-navbar">
+        <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme" id="layout-navbar">
           <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
             <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
               <i class="bx bx-menu bx-sm"></i>
             </a>
           </div>
 
-          <div class="notice-container px-4 py-2 bg-primary text-white rounded shadow-sm d-none d-md-flex align-items-center">
+          <div class="notice-container px-4 py-2 bg-primary text-white rounded shadow-sm d-none d-md-flex align-items-center col-md-10 col-xl-8">
             <b class="me-3">Notice:</b>
             <marquee behavior="scroll" direction="left" class="notice-text">
               {{setting.notice}}
